test/parsing/errors/cantApplyPrivate.chpl
class Foo {
  private var a : int = 5;
}
